<resources>
    <string name="app_name">EPForumL</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings_fragment">Settings</string>
    <string name="chat_fragment">Chat</string>}
    <string name="ds_photo_editor_top_button_apply">ds_photo_editor_top_button_apply</string>
    <string name="account_fragment">Account</string>
    <string name="my_questions_fragment">My Questions</string>
    <string name="saved_questions_fragment">Saved Questions</string>
    <string name="welcome_main">Welcome to EPForumL!</string>
    <string name="home">Home</string>
    <string name="my_questions">My Questions</string>
    <string name="courses">Courses</string>
    <string name="saved_questions">Saved Questions</string>
    <string name="options">Options</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="forum">Forum</string>
    <string name="menu">Menu</string>
    <string name="channel">channel</string>
    <string name="switch_mode">switch_mode</string>
    <string name="subscriptions">subscriptions</string>
    <string name="privacy">privacy</string>
    <string name="change_password">change_password</string>
    <string name="choose_new_password">choose_new_password</string>
    <string name="repeat_password">repeat_password</string>
    <string name="share_localisation">share_localisation</string>
    <string name="preferences">Preferences</string>
    <string name="no_match">No match found</string>

    ///Objects of the new fragment page:
    <string name="preview_question">Preview Question</string>
    <string name="post_new_question_anonymously">Post Question Anonymously?</string>
    <string name="new_question_details">Question Details</string>
    <string name="new_question_title">Question Title</string>
    <string name="select_subject_of_new_question">Select Subject</string>
    <string name="ask_a_new_question">Ask a Question</string>
    <string name="subject_prompt">subject prompt</string>
    <string name="submit_new_question">Submit</string>
    <string name="add_question_button">add question button</string>
    <string name="add_question_button_" />
    <string name="back"><![CDATA[< BACK]]></string>
    <string name="refresh">REFRESH</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="you_are_not_connected">Please log in to access chats.</string>
    <string name="you_are_not_connected_courses">Please log in to select courses.</string>
    <string name="you_are_not_connected_my_question">Please log in to see your questions.</string>
    <string name="course">Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagetomodify">imageToModify</string>
    <string name="login_welcome">Welcome to EPForumL !</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="my_questions_display">My Questions</string>
    <string name="you_still_haven_t_asked_any_question">You still haven\'t asked any question.</string>
    <string name="you_have_not_started_a_conversation_yet">You have not started a conversation yet!</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="chats">Chats</string> />
    <string name="please_login_to_post_answers">Please login to post answers and endorsements.</string>
    <string name="User_not_found" />
    <string name="hop_une_belle_question_et_tout_bla_bla_bla_beauuucoup_trop_trop_trop_trop_troptt_t_t_t_tt_tt_t_tt_tt_t_t_longue_t_t_t_tt_tt_t_tt_tt_t_t_longuet_t_t_tt_tt_t_tt_tt_t_t_longue_t_t_t_tt_tt_t_tt_tt_t_t_longue">Hop une belle question et tout bla bla bla beauuucoup trop trop trop trop troptt t t t tt tt t tt tt t t longue t t t tt tt t tt tt t t longuet t t tt tt t tt tt t t longue t t t tt tt t tt tt t t longue</string>
    <string name="go_to_new_question_fragment">Go to new question fragment</string>
    <string name="take_photo">take_photo</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="endorse_this">Endorse this</string>
    <string name="endorsed">Endorsed</string>
    <string name="write_an_answer">Write an answer...</string>
    <string name="write_a_message">Write a message...</string>
    <string name="chat_with_me">Chat With Me</string>
    <string name="sign_out">Sign-Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_in">Sign-In</string>
    <string name="you_are_currently_using_the_app_as_a_guest">You are currently using the app as a guest.\nPlease log in to access additional features.</string>
    <string name="chat_with_someone_new">Chat with someone new</string>
    <string name="import_picture">Import picture</string>
    <string name="take_picture">TAKE PICTURE</string>
    <string name="no_image_selected_yet">No image selected yet</string>
    <string name="add_content">Add content</string>
    <string name="notify">Notify :</string>
    <string name="subscribe">Subscribe :</string>
    <string name="username">Username</string>
    <string name="answer">Answer</string>
    <string name="_0">0</string>
    <string name="please_login_to_save_questions">Please log in to save questions.</string>
    <string name="image">Image</string>

    <string name="add_course_title">Add new course</string>
    <string name="enter_course_name">Write course name...</string>
    <string name="add_course_button">Add course</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">map</string>
    <string name="change_map_perm">Change permissions</string>
    <string name="share_position">Share position</string>
    <string name="localization_text">Share position</string>
    <string name="latex_button_description">Shows the latex display of the written text</string>
    <string name="latex_output">Latex output</string>
    <string name="latex_input">Latex input</string>
    <string name="render">Render</string>
    <string name="latex_save">Save</string>
    <string name="latex_cancel">Cancel</string>
    <string name="record_voice_note">Record Voice Note</string>
    <string name="play_voice_note">Play voice note</string>

    <string name="qdetail_username_text">Username asks :</string>
    <string name="anonymous">Anonymous</string>
    <string name="unknownUser">\"Unknown User\"</string>

</resources>